traefik/ingress/ingress-homelab.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: homelab
  name: homelab-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`upkuma.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: uptime-kuma
          namespace: homelab
          port: 3001
      middlewares:
        - name: redirect-https-middleware
          namespace: default
    - kind: Rule
      match: Host(`qinglong.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: qinglong
          namespace: homelab
          port: 5700
      middlewares:
        - name: redirect-https-middleware
          namespace: default
    - kind: Rule
      match: Host(`freshrss.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: freshrss
          namespace: homelab
          port: 80
      middlewares:
        - name: redirect-https-middleware
          namespace: default
    - kind: Rule
      match: Host(`stirling.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: stirling-pdf
          namespace: homelab
          port: 8080
      middlewares:
        - name: redirect-https-middleware
          namespace: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: homelab
  name: homelab-ingress-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`upkuma.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: uptime-kuma
          namespace: homelab
          port: 3001
    - kind: Rule
      match: Host(`qinglong.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: qinglong
          namespace: homelab
          port: 5700
    - kind: Rule
      match: Host(`freshrss.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: freshrss
          namespace: homelab
          port: 80
    - kind: Rule
      match: Host(`stirling.local.r4y.site`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: stirling-pdf
          namespace: homelab
          port: 8080
      # middlewares:
      #   - name: basic-auth
      #     namespace: kube-system
      #   - name: echo-header
      #     namespace: default
  tls:
    secretName: local-r4y-prod
